Created Sprint 0 Testing API

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,6 @@
 PORT=3000
-
-PGUSER=postgres
-PGHOST=localhost
-PGPASSWORD=password
-PGDATABASE=rkuan
-PGPORT=5432 
+USER=postgres
+HOST=localhost
+PASSWORD=password
+DATABASE=rkuan
+DIALECT=postgres
