--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -13,8 +13,10 @@
     "react-bootstrap": "^2.7.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
