--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "add-to-calendar-button": "^2.2.1",
     "bootstrap": "^5.2.3",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-cookie": "^4.1.1",
@@ -17,7 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.4.3",
+    "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mkyy/mui-search-bar": "^0.5.2",
     "@mui/material": "^5.11.7"
   }
 }
