--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "build": "npm install; npm run build"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
